# Toody

./: LICENSE  README.md  Toody.cabal  stack.yaml
lib/: Toody.hs
lib/Toody/: Box.hs  Grid.hs  Helpers.hs  Neighborhood.hs  Parser.hs  Point.hs  Search.hs  Size.hs  Utils.hs  Zipper.hs
test/: Spec.hs
