name:                Toody
version:             0.1.0.0
synopsis:            Two-dimensional parser combinators.
description:
    Toody is a comonadic parser combinator library for parsing two-dimensional
    data, such as ASCII art diagrams and 2D programming languages. Whereas most
    parsing libraries are concerned with one-dimensional streams, Toody works on
    2D grids of cells, extracting data based on spatial relationships.

    It is presented primarily as a proof of concept, and has not been designed
    for efficiency.

homepage:            https://github.com/evincarofautumn/Toody#readme
license:             MIT
license-file:        LICENSE
author:              Jon Purdy
maintainer:          evincarofautumn@gmail.com
copyright:           2017 Jon Purdy
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Toody
  build-depends:       base >= 4.7 && < 5
                     , comonad
  default-language:    Haskell2010

test-suite toody-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , Toody
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/evincarofautumn/Toody
